# illuvatar

./: Cargo.toml  README.md
illuvatar/: Cargo.toml
illuvatar/src/: logging.rs  main.rs
illuvatar/src/accumulator/: mod.rs
illuvatar/src/bcl/: mod.rs  reader.rs
illuvatar/src/bcl/parser/: cbcl.rs  filter.rs  mod.rs
illuvatar/src/manager/: mod.rs  reader.rs  writer.rs
illuvatar/src/resolve/: mod.rs
samplesheet/: Cargo.toml
samplesheet/src/: deserializers.rs  lib.rs  parser.rs  reader.rs
seqdir/: Cargo.toml
seqdir/src/: lib.rs  manager.rs  run_completion.rs
