[package]
name = "illuvatar"
version = "0.1.0"
edition = "2021"

[dependencies]
samplesheet = {path = "../samplesheet"}
seqdir = {path = "../seqdir"}
clap = { version = "4.4.11", features = ["derive"] }
fxhash = "0.2.1"
libdeflater = "1.19.0"
log = "0.4.20"
rayon = "1.8.0"
slog = { version = "2.7.0", features = ["release_max_level_trace"] }
slog-async = "2.8.0"
slog-term = "2.9.0"
thiserror = "1.0.50"
tokio = "1.34.0"
nom = "7.1.3"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
